# bastion

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  log.md  typeshare.toml
.beads/: metadata.json
.claude/commands/: README.md  chore.md  document.md  generate-master-plan.md  generate-tasks.md  log-work.md  plan.md  ticket.md
.claude/workflows/: harness.schema.json  sdlc-block.js  sdlc-flow.js  sdlc-run.js  sdlc-task.js
crates/bastion/: Cargo.toml
crates/okf-core/: Cargo.toml
docs/: abort.md  brain.md  brainval.md  claude-code-workflow.md  code.md  config.md  costs.md  data-contract.md  detect.md  docview.md  index.md  inspect.md  monitor.md  observ.md  okf.md  run.md  serve-api.md  sessions.md  setup.md  validate.md  workspace-contract.md
docs/workflows/: commands.md  index.md  sdlc-block.md  sdlc-flow.md  sdlc-run.md  sdlc-task.md
planning/: .template-version  context.md  handoff.md  harness.examples.md  harness.json  index.md  knowledge.md  master-plan.md  memory.md  state.json  status.md
planning/11.A-serve-scaffold-and-api/: tasks.md
planning/11.B-session-rest/: tasks.md
planning/11.C-websocket-hub/: tasks.md
planning/11.C0-agent-state-detection/: tasks.md
planning/12.a-unified-console/: tasks.md
planning/12.c-kanban-rows/: tasks.md
planning/12.d-mission-control-theme/: tasks.md
planning/12.e-mission-control-sessions/: tasks.md
planning/13.0-spine-primary-navigation/: tasks.md
planning/13.1-persistent-agent-panel/: tasks.md
planning/13.2-mouse-interactivity/: tasks.md
planning/14.0-config-driven-theme/: tasks.md
planning/15.0-cargo-workspace-skeleton/: tasks.json  tasks.md
planning/15.1-extract-okf-core/: tasks.json  tasks.md
planning/15.12-mev-okf-core-convergence/: breakdown.md  tasks.json  tasks.md
planning/15.2-unify-cli-bastion-side/: ba15-dependency-graph.html  tasks.json  tasks.md
planning/7-A-observability-and-control/: tasks.md
planning/archive/: index.md
planning/bastion-product/: plan.md
planning/bastion-tui-improvements/: initial-plan.md  notes.md  plan.md  tasks.md  ux-redesign.md
planning/chore-sessions-error-test-coverage/: tasks.md
planning/decisions/: D1-initial-okf.md  D11-herdr-reference-only.md  D12-toml-manifest-detection.md  D13-unified-console-target.md  D14-bella-engine-dependency-contract.md  D15-mev-integration-cross-repo-path-dep.md  D16-ba15-12-scope-widened-graph-resolution.md  D2-observability-consumer-contract.md  D3-pin-data-contract.md  D4-session-management-surface.md  D5-sessions-synchronous.md  D6-malformed-tmux-line-skip.md  index.md
planning/phase0-blockA/: breakdown.md  tasks.md
planning/phase1-blockB/: tasks.md
planning/phase11-blockD/: tasks.md
planning/phase2-blockA/: tasks.md
planning/phase3-blockA/: tasks.md
planning/phase3-blockB/: tasks.md
planning/phase5-blockA/: tasks.md
planning/phase5-blockC/: tasks.md
planning/phase5-blockD/: tasks.md
planning/phase5-blockE/: tasks.md
planning/phase5-blockF/: tasks.md
planning/phase6-blockA/: tasks.md
planning/phase6-blockB/: tasks.md
planning/phase6-blockC/: tasks.md
scripts/: check-typeshare-drift.sh  gen-types.sh
src/: cli.rs  config.rs  lib.rs  main.rs  man.rs  ui_theme.rs
src/api/: client.rs
src/brain/: code.rs  code_graph.rs  graph.rs  mod.rs  okf.rs  query.rs  spaces.rs
src/brainval/: mod.rs
src/costs/: budget.rs  mod.rs  pricing.rs  tokens.rs  watch.rs
src/db/: costs.rs  health.rs  mod.rs  workflows.rs
src/detect/: golden_tests.rs  manifest.rs  mod.rs
src/engine/: mod.rs  youtube.rs
src/inspect/: mod.rs
src/momentum/: collect.rs  (+3 more)
tests/: abort_contract.rs
types/: serve.ts
(+344 files in other folders)
