[package]
name = "bastion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dotenvy = "0.15.7"
petgraph = "0.8.3"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
clap_mangen = "0.2"
